# personal-site

./: .gitignore  Cargo.toml  data.db  index.css  index.html  index.mustache  tailwind.config.js
.github/workflows/: publish.yml  rust.yml
macros/: Cargo.toml
macros/src/: lib.rs
src/: app.rs  lib.rs  main.rs  router.rs
src/components/: layout.rs
src/islands/: mod.rs  movie_list.rs
src/routes/: home.rs  mod.rs  movies.rs  projects.rs
